Criação layout e algumas configuracoes de style

--- a/index.html
+++ b/index.html
@@ -12,7 +12,14 @@
 </head>
 
 <body>
+    <div id="app">
+        <main>
+            <div class="main-container"></div>
+        </main>
 
+        <aside>
+            <div class="aside-container"></div>
+        </aside>
+    </div>
 </body>
-
 </html>
